[project]
authors = [{name = "Emilio Andrès Heiberg Aranda", email = "ara.emi44@gmail.com"}]
dependencies = []
name = "nrkball"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nrkball = { path = ".", editable = true }

[tool.pixi.tasks]
server = { cmd = [
                  "docker",                         
                  "run",                            
                  "-p", "3000:3000",                # map host:container port
                  "--rm",                           # remove container on exit
                  "--init",                         # use tini for PID 1
                  "-it",                            # interactive + TTY
                  "--workdir", "/home/pwuser",      # working directory in container
                  "--user", "pwuser",               # run as pwuser
                  "mcr.microsoft.com/playwright:v1.56.0-noble",  # image
                  "/bin/sh",                        # shell
                  "-c",                             # run the following command string
                  "xvfb-run npx -y playwright@1.56.0 run-server --port 3000 --host 0.0.0.0"  # server cmd
] }

game = { cmd = ["pixi run python -c 'import nrkball; nrkball.run()'"]}
[tool.pixi.dependencies]
pytest-playwright = ">=0.7.1,<0.8"
